--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
         <a class="btn" href="variabili.html">Variabili</a>
         <a class="btn" href="variabili-tabella.html">Tabella variabili</a>
         <a class="btn" href="grafici.html">Tabella grafici</a>
+        <a class="btn" href="autori.html">Autori</a>
         <a class="btn" href="glossario.html">Glossario</a>
         <a class="btn" href="moderators.html">Aggiungi moderators</a>
         <a class="btn" href="moderators-tabella.html">Tabella moderators</a>
